// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple levels 1`] = `
HTMLCollection [
  <nav
    class="svelte-12uy6v9"
  >
    <ol />
  </nav>,
  <ul
    class="svelte-1i7sfgn"
  >
    <li
      aria-selected="false"
      class="svelte-1i7sfgn isCurrent"
      role="treeitem"
    >
      <div
        class="svelte-1i7sfgn"
      >
        <span
          class="material-icons symbol svelte-1i7sfgn"
        >
          architecture
        </span>
        Component #3
      </div>
       
    </li>
    <li
      aria-selected="false"
      class="svelte-1i7sfgn isCurrent"
      role="treeitem"
    >
      <div
        class="svelte-1i7sfgn folder"
      >
        <span
          class="material-icons symbol svelte-1i7sfgn"
        >
          folder_open
        </span>
        Folder A
      </div>
       
    </li>
    <li
      aria-selected="false"
      class="svelte-1i7sfgn isCurrent"
      role="treeitem"
    >
      <div
        class="svelte-1i7sfgn folder"
      >
        <span
          class="material-icons symbol svelte-1i7sfgn"
        >
          folder_open
        </span>
        Folder D
      </div>
       
    </li>
  </ul>,
]
`;

exports[`Single level 1`] = `
HTMLCollection [
  <nav
    class="svelte-12uy6v9"
  >
    <ol />
  </nav>,
  <ul
    class="svelte-1i7sfgn"
  >
    <li
      aria-selected="false"
      class="svelte-1i7sfgn isCurrent"
      role="treeitem"
    >
      <div
        class="svelte-1i7sfgn"
      >
        <span
          class="material-icons symbol svelte-1i7sfgn"
        >
          architecture
        </span>
        Component #1
      </div>
       
    </li>
    <li
      aria-selected="false"
      class="svelte-1i7sfgn isCurrent"
      role="treeitem"
    >
      <div
        class="svelte-1i7sfgn"
      >
        <span
          class="material-icons symbol svelte-1i7sfgn"
        >
          architecture
        </span>
        Component #2
      </div>
       
    </li>
    <li
      aria-selected="false"
      class="svelte-1i7sfgn isCurrent"
      role="treeitem"
    >
      <div
        class="svelte-1i7sfgn"
      >
        <span
          class="material-icons symbol svelte-1i7sfgn"
        >
          architecture
        </span>
        Component #3
      </div>
       
    </li>
  </ul>,
]
`;
